fix(responsiveness): fix responsive issues on small screens

--- a/app/components/Events/Modal.scss
+++ b/app/components/Events/Modal.scss
@@ -1,4 +1,5 @@
 @import '../../theme/variables';
+@import '../../theme/breakpoints';
 
 .modalContainer {
   h1 {
@@ -37,8 +38,12 @@
 }
 
 .modalContent {
-  padding: 2em;
   position: relative;
+  padding: 1em 1em 2em;
+
+  @include mappy-bp(medium) {
+    padding: 1em 2em 2em;
+  }
 }
 
 .pageContainer {
@@ -86,7 +91,6 @@
       line-height: $size;
       opacity: 1;
       position: relative;
-      cursor: pointer;
       display: inline-block;
       user-select: none;
       transition: box-shadow 0.2s linear;
