--- a/app/components/Speakers/Modal.scss
+++ b/app/components/Speakers/Modal.scss
@@ -1,4 +1,5 @@
 @import '../../theme/variables';
+@import '../../theme/breakpoints';
 
 .modalContainer {
   overflow: auto;
@@ -10,7 +11,12 @@
 }
 
 .modalContent {
-  padding: 1em 2em 2em;
+  position: relative;
+  padding: 1em 1em 2em;
+
+  @include mappy-bp(medium) {
+    padding: 1em 2em 2em;
+  }
 }
 
 .title {
