--- a/app/theme/_typography.scss
+++ b/app/theme/_typography.scss
@@ -2,7 +2,9 @@
  * Typography
  */
 $typi: (
-  null: (16px, 1.6),
+  null: (14px, 1.6),
+  xsmall: (15px, 1.6),
+  small: (16px, 1.6),
 );
 
 $h1-map: (
